MET-5969 Finished first API call implementation